[gd_scene load_steps=5 format=3 uid="uid://cam84clue4rry"]

[ext_resource type="Script" path="res://scripts/player_projectile_rock.gd" id="1_r8283"]
[ext_resource type="Texture2D" uid="uid://cf8fa200s7y1y" path="res://assets/rock.png" id="1_sjxdr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qslmy"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qnaj3"]
radius = 3.0

[node name="Player_Projectile_Rock" type="Node2D"]
top_level = true
script = ExtResource("1_r8283")
dmg = 50

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_sjxdr")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_qslmy")

[node name="ImpactDetector" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ImpactDetector"]
shape = SubResource("CircleShape2D_qnaj3")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
